# tugendane1

./: .replit  README.md  app.py  celery_worker.py  config.py  models.py  pyproject.toml  utils.py
attached_assets/: Pasted-Project-Tugendane-An-AI-Agent-for-Rwandan-Government-Services-Overview-Develop-a-prototype-MVP-1742551495883.txt
data/: sample_services.py
instance/: tugendane.db
routes/: __init__.py  api.py  web.py
services/: __init__.py  geo_service.py  nlp_service.py  scheduler.py  sms_service.py  voice_service.py
static/css/: custom.css
static/js/: main.js
templates/: admin.html  base.html  chat.html  conversation_detail.html  index.html  services_map.html
